<resources>
    <string name="app_name">Lab01 Calculator</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="result">Result:</string>
    <string name="Add">Add</string>
    <string name="Subtract">Subtract</string>
    <string name="Multiply">Multiply</string>
    <string name="Divide">Divide</string>
    <string name="hint">0</string>
    <string name="trigonometry">Trigonometry</string>
    <string name="sinys">Sin</string>
    <string name="cosinys">Cos</string>
    <string name="tangens">Tan</string>
    <string name="Root">Root</string>
    <string name="Pow">Degree</string>
    <string name="standart">Standard actions</string>
    <string name="number">Number</string>

</resources>