<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:background="#EDDAF8"
        android:minHeight="1100dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintHorizontal_chainStyle="packed"
        tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:minWidth="450dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/standart"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/a"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="visible"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/number_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number|numberDecimal|numberSigned"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="20sp"
                android:visibility="visible"
                tools:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/b"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="visible"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/number_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number|numberDecimal|numberSigned"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="20sp"
                android:visibility="visible"
                tools:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/result"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/result"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="visible"
                tools:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/Add_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mar_left_rigth"
                android:layout_marginTop="@dimen/mar_top_bot"
                android:layout_marginRight="@dimen/mar_left_rigth"
                android:layout_marginBottom="@dimen/mar_top_bot"
                android:layout_weight="1"
                android:text="@string/Add"
                android:visibility="visible"
                tools:visibility="visible" />

            <Button
                android:id="@+id/Subtract_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mar_left_rigth"
                android:layout_marginTop="@dimen/mar_top_bot"
                android:layout_marginRight="@dimen/mar_left_rigth"
                android:layout_marginBottom="@dimen/mar_top_bot"
                android:layout_weight="1"
                android:text="@string/Subtract"
                android:visibility="visible"
                tools:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/Multiply_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mar_left_rigth"
                android:layout_marginTop="@dimen/mar_top_bot"
                android:layout_marginRight="@dimen/mar_left_rigth"
                android:layout_marginBottom="@dimen/mar_top_bot"
                android:layout_weight="1"
                android:text="@string/Multiply"
                android:visibility="visible"
                tools:visibility="visible" />

            <Button
                android:id="@+id/Divide_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mar_left_rigth"
                android:layout_marginTop="@dimen/mar_top_bot"
                android:layout_marginRight="@dimen/mar_left_rigth"
                android:layout_marginBottom="@dimen/mar_top_bot"
                android:layout_weight="1"
                android:text="@string/Divide"
                android:visibility="visible"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/trigonometry"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/number_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number|numberDecimal|numberSigned"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="20sp"
                android:visibility="visible"
                tools:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Sinys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mar_left_rigth"
                android:layout_marginTop="@dimen/mar_top_bot"
                android:layout_marginRight="@dimen/mar_left_rigth"
                android:layout_marginBottom="@dimen/mar_top_bot"
                android:layout_weight="1"
                android:text="@string/sinys"
                android:textSize="14sp" />

            <Button
                android:id="@+id/Cosinys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mar_left_rigth"
                android:layout_marginTop="@dimen/mar_top_bot"
                android:layout_marginRight="@dimen/mar_left_rigth"
                android:layout_marginBottom="@dimen/mar_top_bot"
                android:layout_weight="1"
                android:text="@string/cosinys"
                android:textSize="14sp" />

            <Button
                android:id="@+id/Tangens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mar_left_rigth"
                android:layout_marginTop="@dimen/mar_top_bot"
                android:layout_marginRight="@dimen/mar_left_rigth"
                android:layout_marginBottom="@dimen/mar_top_bot"
                android:layout_weight="1"
                android:text="@string/tangens"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/result_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/result"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Root"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/number_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number|numberDecimal|numberSigned"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="20sp"
                android:visibility="visible"
                tools:visibility="visible" />

            <Button
                android:id="@+id/Root"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mar_left_rigth"
                android:layout_marginRight="@dimen/mar_left_rigth"
                android:layout_weight="1"
                android:text="@string/Root" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/result_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/result"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Pow"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="visible"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/number_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number|numberDecimal|numberSigned"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="20sp"
                android:visibility="visible"
                tools:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/Pow"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="visible"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/number_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number|numberDecimal|numberSigned"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="20sp"
                android:visibility="visible"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Pow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mar_left_rigth"
                android:layout_marginTop="@dimen/mar_top_bot"
                android:layout_marginRight="@dimen/mar_left_rigth"
                android:layout_marginBottom="@dimen/mar_top_bot"
                android:layout_weight="1"
                android:text="@string/Pow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/result_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/result"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>